# anti_algo_algo

./: Dockerfile  README.md  db_connection.py  deets.txt  docker-compose.yaml  email_sender.py  flask_app.py  get_random_videos.py  origin.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
