[tool.poetry]
name = "anti-algo"
version = "0.1.0"
description = ""
authors = ["Matias-Sanchez-Wilson <92598449+Matias-Sanchez-Wilson@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anti_algo"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
pywin32 = "^306"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
